# web-bots

./: .gitignore  README.md  pyproject.toml
notebooks/.virtual_documents/: Untitled.ipynb.py
tests/: test_web_bots.py
web_bots/: check_cl.py  check_pb.py
