[tool.poetry]
name = "web-bots"
version = "0.1.0"
description = ""
authors = ["Jorge <jorgemarpa@ug.uchile.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.4.1"
selenium = "^4.1.3"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
